Corrected download instructions.

--- a/ch01-introduction.tex
+++ b/ch01-introduction.tex
@@ -36,9 +36,9 @@ VTK\index{VTK} (``\textbf{V}isualisation \textbf{T}ool\textbf{k}it'') is a graph
 
 \section{OGS Download and Installation}
 
-The \ogsde{} is available for $64$-bit \emph{Ubuntu-} and \emph{Mac OS X} systems as well as for $32$- or $64$-bit \emph{Windows} operation systems, respectively. It is recommended to download the $64$-bit version for 64-bit \emph{Windows.} The binary files needed to run the programme can be found at \url{http://www.opengeosys.org/resources/downloads}. The console version of the \ogs{} simulation software is available on the same website.\index{Download}
+The \ogsde{} is available for $64$-bit \emph{Ubuntu-} and \emph{Mac OS X} systems as well as for $32$- or $64$-bit \emph{Windows} operation systems, respectively. It is recommended to download the $64$-bit version for 64-bit \emph{Windows.} The binary files needed to run the programme can be found at \url{https://www.opengeosys.org/ogs-5/}. The console version of the \ogs{} simulation software is available on the same website.\index{Download}
 
-To use \ogs{} or the \de{} under \emph{Windows,} it is necessary to additionally download and install the free ``Visual Studio 2013 Redistributable''-package\index{Redistributable Package} from \emph{Microsoft.} It is available directly on the \ogs{} download page or from \url{http://www.microsoft.com}. The downloaded version of this package needs to be for the same architecture (i.e. 32- or 64-bit) as the downloaded version for the \de{}. Without this additional package, DLL-related error messages will be displayed on start-up.
+To use \ogs{} or the \de{} under \emph{Windows,} it is necessary to additionally download and install the free ``Visual Studio Redistributable''-package\index{Redistributable Package} from \emph{Microsoft.} It is available directly on the \ogs{} download page. The downloaded version of this package needs to be for the same architecture (i.e. 32- or 64-bit) as the downloaded version for the \de{}. Without this additional package, DLL-related error messages will be displayed on start-up.
 
 Once all necessary packages are installed, the \de{} needs only to be extracted from the downloaded zip-files to any directory and can be run instantly. For \emph{Windows,} start \cmd{ogs-gui.exe} to run the GUI. Using \emph{Ubuntu} or \emph{Mac OS X,} the programme can be started by calling \cmd{./ogs-gui}.\index{Installation}
 
